--- a/src/app/acceuil/acceuil.component.html
+++ b/src/app/acceuil/acceuil.component.html
@@ -1,157 +1,179 @@
-<div id="page">
 
-  <div class="header header-fixed header-auto-show header-logo-app">
-    <a href="index-2.html" class="header-title">AMS</a>
-    <a href="#" data-back-button class="header-icon header-icon-1"><i class="fas fa-arrow-left"></i></a>
-    <a href="#" data-toggle-theme class="header-icon header-icon-2 show-on-theme-dark"><i class="fas fa-sun"></i></a>
-    <a href="#" data-toggle-theme class="header-icon header-icon-2 show-on-theme-light"><i class="fas fa-moon"></i></a>
-    <a href="#" data-menu="menu-highlights" class="header-icon header-icon-3"><i class="fas fa-brush"></i></a>
+<div class="header header-fixed header-auto-show header-logo-app">
+  <a href="#0" class="header-title">AMS</a>
+  <a href="#" data-menu="menu-main" class="header-icon header-icon-1"><i class="fas fa-bars"></i></a>
+  <a href="#" data-toggle-theme class="header-icon header-icon-2 show-on-theme-dark"><i class="fas fa-sun"></i></a>
+  <a href="#" data-toggle-theme class="header-icon header-icon-2 show-on-theme-light"><i class="fas fa-moon"></i></a>
+  <a href="#" data-menu="menu-highlights" class="header-icon header-icon-3"><i class="fas fa-brush"></i></a>
+  </div>
+  <div id="footer-bar" class="footer-bar-5">
+    <a href="/blog"><i data-feather="book" data-feather-line="1" data-feather-size="21" data-feather-color="red2-dark" data-feather-bg="red2-fade-light"></i><span>Blog</span></a>
+    <a href="/telechargement"><i data-feather="download" data-feather-line="1" data-feather-size="21" data-feather-color="green1-dark" data-feather-bg="green1-fade-light"></i><span>Telechargement</span></a>
+    <a href="/" class="active-nav"><i data-feather="home" data-feather-line="1" data-feather-size="21" data-feather-color="blue2-dark" data-feather-bg="blue2-fade-light"></i><span>Accueil</span></a>
+    <a href="formation"><i data-feather="youtube" data-feather-line="1" data-feather-size="21" data-feather-color="brown1-dark" data-feather-bg="brown1-fade-light"></i><span>Formation</span></a>
+    <a href="/parametre"><i data-feather="settings" data-feather-line="1" data-feather-size="21" data-feather-color="gray2-dark" data-feather-bg="gray2-fade-light"></i><span>Paramètre</span></a>
     </div>
-    <li router-link="/parametre" ></li>
-    <div id="footer-bar" class="footer-bar-5">
-      <a href="/blog"><i data-feather="book" data-feather-line="1" data-feather-size="21" data-feather-color="red2-dark" data-feather-bg="red2-fade-light"></i><span>Blog</span></a>
-      <a href="/telechargement"><i data-feather="download" data-feather-line="1" data-feather-size="21" data-feather-color="green1-dark" data-feather-bg="green1-fade-light"></i><span>Telechargement</span></a>
-      <a routerLink="/" routerLinkActive="active-nav"><i data-feather="home" data-feather-line="1" data-feather-size="21" data-feather-color="blue2-dark" data-feather-bg="blue2-fade-light"></i><span>Accueil</span></a>
-      <a href="formation"><i data-feather="youtube" data-feather-line="1" data-feather-size="21" data-feather-color="brown1-dark" data-feather-bg="brown1-fade-light"></i><span>Formation</span></a>
-      <a routerLink="/parametre" ><i data-feather="settings" data-feather-line="1" data-feather-size="21" data-feather-color="gray2-dark" data-feather-bg="gray2-fade-light"></i><span>Paramètre</span></a>
+  <div class="page-content">
+  <div class="page-title page-title-large">
+  <h2 data-username="Bienvene" class="greeting-text"></h2>
+  <a href="#" data-menu="menu-main" class="bg-fade-gray1-dark shadow-xl preload-img" data-src="assets/images/avatars/5s.png"></a>
+  </div>
+  <div class="card header-card shape-rounded" data-card-height="210">
+  <div class="card-overlay bg-highlight opacity-95"></div>
+  <div class="card-overlay dark-mode-tint"></div>
+  <div class="card-bg preload-img" data-src="assets/images/pictures/20s.jpg"></div>
+  </div>
+
+  <div class="single-slider-boxed text-center owl-no-dots owl-carousel">
+  <div class="card rounded-l shadow-l" data-card-height="320">
+  <div class="card-bottom">
+  <h1 class="font-24 font-700">Blog</h1>
+  <p class="boxed-text-xl">
+    Remplie d'astuces et tutoriels.
+  </p>
+  </div>
+  <div class="card-overlay bg-gradient-fade"></div>
+  <div class="card-bg owl-lazy" data-src="assets/images/pictures/17m.jpg"></div>
+  </div>
+  <div class="card rounded-l shadow-l" data-card-height="320">
+  <div class="card-bottom">
+  <h1 class="font-24 font-700">Formation video</h1>
+  <p class="boxed-text-xl">
+    Apprener a maitriser les logiciels que vous telechargé.
+  </p>
+  </div>
+  <div class="card-overlay bg-gradient-fade"></div>
+  <div class="card-bg owl-lazy" data-src="assets/images/pictures/8m.jpg"></div>
+  </div>
+  <div class="card rounded-l shadow-l" data-card-height="320">
+  <div class="card-bottom">
+  <h1 class="font-24 font-700">Telechargement</h1>
+  <p class="boxed-text-xl">
+    Telecharger des milliers de logiciels gratuitement.
+  </p>
+  </div>
+  <div class="card-overlay bg-gradient-fade"></div>
+  <div class="card-bg owl-lazy" data-src="assets/images/pictures/14m.jpg"></div>
+  </div>
+  </div>
+  <div class="content mt-0">
+  <div class="row">
+    <div class="col-6">
+      <a href="#" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Telechargerment</a>
       </div>
-      <div class="page-content">
-        <div class="page-title page-title-large">
-        <h2 data-username="Bienvenue" class="greeting-text"></h2>
-        <a href="#" data-menu="menu-main" class="bg-fade-gray1-dark shadow-xl preload-img" data-src="assets/images/avatars/5s.png"></a>
-        </div>
-        <div class="card header-card shape-rounded" data-card-height="210">
-        <div class="card-overlay bg-highlight opacity-95"></div>
-        <div class="card-overlay dark-mode-tint"></div>
-        <div class="card-bg preload-img" data-src="assets/images/pictures/20s.png"></div>
-        </div>
-
-
-
-        <div class="single-slider-boxed text-center owl-no-dots owl-carousel">
-        <div class="card rounded-l shadow-l" data-card-height="320">
-        <div class="card-bottom">
-        <h1 class="font-24 font-700">Blog</h1>
-        <p class="boxed-text-xl">
-        Remplie d'astuces et tutoriels.
-        </p>
-        </div>
-        <div class="card-overlay bg-gradient-fade"></div>
-        <div class="card-bg owl-lazy" data-src="assets/images/pictures/17m.jpg"></div>
-        </div>
-        <div class="card rounded-l shadow-l" data-card-height="320">
-        <div class="card-bottom">
-        <h1 class="font-24 font-700">Formation video</h1>
-        <p class="boxed-text-xl">
-        Apprener a maitriser les logiciels que vous telechargé
-        </p>
-        </div>
-        <div class="card-overlay bg-gradient-fade"></div>
-        <div class="card-bg owl-lazy" data-src="assets/images/pictures/8m.jpg"></div>
-        </div>
-        <div class="card rounded-l shadow-l" data-card-height="320">
-        <div class="card-bottom">
-        <h1 class="font-24 font-700">Telechargement</h1>
-        <p class="boxed-text-xl">
-        Telecharger des milliers de logiciels gratuitement
-        </p>
-        </div>
-        <div class="card-overlay bg-gradient-fade"></div>
-        <div class="card-bg owl-lazy" data-src="assets/images/pictures/14m.jpg"></div>
-        </div>
-        </div>
-        <div class="content mt-0">
-        <div class="row">
-
-        <div class="col-6">
-        <a href="#" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Telechargerment</a>
-        </div>
-        <div class="col-6">
-        <a href="#" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Formation Video</a>
-        </div>
-        <p><br></p>
-        <div class="col-6">
-        <a href="#" class="btn btn-full btn-border btn-m rounded-s text-uppercase font-900 shadow-l border-highlight color-highlight">Blog</a>
-        </div>
-        <div class="col-6">
-        <a href="#" class="btn btn-full btn-border btn-m rounded-s text-uppercase font-900 shadow-l border-highlight color-highlight">Forums</a>
-        </div>
-
-        <p><br></p>
-        <div class="col-6">
-            <a href="#" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight" data-menu="menu-signin">Se connecter</a>
-            </div>
-            <div class="col-6">
-            <a href="#" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight" data-menu="menu-signup">S'inscrire</a>
-            </div>
-
-            <p><br></p>
-            <div class="col-6">
-                <button data-request="onLogout" data-request-data="redirect: '/'" class="check-age btn btn-full btn-m shadow-l rounded-s bg-blue2-dark mt-3 text-uppercase font-900">Deconnexion</button>
-            </div>
-        </div>
-        </div>
-
-        <div class="card card-style">
-        <div class="content text-center">
-        <h2>Connaitre ces trois etapes</h2>
-        <p class="boxed-text-xl">
-        le but de ce site est de vous aidé a gerer votre entreprise.
-        </p>
-        </div>
-        <div class="divider divider-small mb-3 bg-highlight"></div>
-        <div class="content">
-        <div class="d-flex mb-4 pb-3">
-        <div>
-        <i class="far fa-star color-yellow1-dark fa-3x pt-3 icon-size"></i>
-        </div>
-        <div>
-        <h5 class="font-16 font-600">Telecharger les logiciels</h5>
-        <p>
-        les logiciels sont disponible dans la section telechargement.
-        </p>
-        </div>
-        </div>
-        <div class="d-flex mb-4 pb-3">
-        <div>
-        <i class="fa fa-mobile-alt color-blue2-dark fa-3x pt-3 icon-size"></i>
-        </div>
-        <div>
-        <h5 class="font-16 font-600">Formation video</h5>
-        <p>
-        Formez vous a maitriser les logiciels que vous telechagé sur ce site
-        </p>
-        </div>
-        </div>
-        <div class="d-flex mb-2">
-        <div>
-        <i class="far fa-check-circle color-green1-dark fa-3x pt-3 icon-size"></i>
-        </div>
-        <div>
-        <h5 class="font-16 font-600">Enjailler vous</h5>
-        <p>
-        Et profitez!
-        </p>
-        </div>
-        </div>
-        </div>
-        </div>
-        <div class="card card-style preload-img" data-src="assets/images/pictures/20s.png" data-card-height="350">
-        <div class="card-center text-center">
-        <p class="line-height-xl font-19 font-300 color-white pl-3 pr-3 mb-2">
-        Site crée par AMS avec la collaboration AAGR .
-        </p>
-        <p class="opacity-50 color-white">Assohou Miesan Stephane</p>
-        </div>
-        <div class="card-overlay bg-highlight opacity-95"></div>
-        </div>
-
-        <div class="footer" data-menu-load="assets/menu-footer.html"></div>
+      <div class="col-6">
+      <a href="#" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Formation Video</a>
+      </div>
+      <p><br></p>
+      <div class="col-6">
+      <a href="#" class="btn btn-full btn-border btn-m rounded-s text-uppercase font-900 shadow-l border-highlight color-highlight">Blog</a>
+      </div>
+      <div class="col-6">
+      <a href="#" class="btn btn-full btn-border btn-m rounded-s text-uppercase font-900 shadow-l border-highlight color-highlight">Forums</a>
       </div>
 
-      <div id="menu-share" class="menu menu-box-bottom menu-box-detached rounded-m" data-menu-load="assets/menu-share.html" data-menu-height="420" data-menu-effect="menu-over">
+      <p><br></p>
+      <div class="col-6">
+          <a href="#" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight" data-menu="menu-signin">Se connecter</a>
+          </div>
+          <div class="col-6">
+          <a href="#" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight" data-menu="menu-signup">S'inscrire</a>
+          </div>
+  </div>
+  </div>
+
+
+  <div class="card card-style">
+    <div class="content text-center">
+    <h2>Connaitre ces trois etapes</h2>
+    <p class="boxed-text-xl">
+    le but de ce site est de vous aidé a gerer votre entreprise.
+    </p>
+    </div>
+    <div class="divider divider-small mb-3 bg-highlight"></div>
+    <div class="content">
+    <div class="d-flex mb-4 pb-3">
+    <div>
+    <i class="far fa-star color-yellow1-dark fa-3x pt-3 icon-size"></i>
+    </div>
+    <div>
+    <h5 class="font-16 font-600">Telecharger les logiciels</h5>
+    <p>
+    les logiciels sont disponible dans la section telechargement.
+    </p>
+    </div>
+    </div>
+    <div class="d-flex mb-4 pb-3">
+    <div>
+    <i class="fa fa-mobile-alt color-blue2-dark fa-3x pt-3 icon-size"></i>
+    </div>
+    <div>
+    <h5 class="font-16 font-600">Formation video</h5>
+    <p>
+    Formez vous a maitriser les logiciels que vous telechagé sur ce site
+    </p>
+    </div>
+    </div>
+    <div class="d-flex mb-2">
+    <div>
+    <i class="far fa-check-circle color-green1-dark fa-3x pt-3 icon-size"></i>
+    </div>
+    <div>
+    <h5 class="font-16 font-600">Enjailler vous</h5>
+    <p>
+    Et profitez!
+    </p>
+    </div>
+    </div>
+    </div>
+    </div>
+  <div class="card card-style preload-img" data-src="assets/images/pictures/20s.jpg" data-card-height="350">
+    <div class="card-center text-center">
+      <p class="line-height-xl font-19 font-300 color-white pl-3 pr-3 mb-2">
+      Site crée par AMS avec la collaboration AAGR .
+      </p>
+      <p class="opacity-50 color-white">Assohou Miesan Stephane</p>
       </div>
-      <div id="menu-highlights" class="menu menu-box-bottom menu-box-detached rounded-m" data-menu-load="assets/menu-colors.html" data-menu-height="510" data-menu-effect="menu-over">
+      <div class="card-overlay bg-highlight opacity-95"></div>
       </div>
-      <div id="menu-main" class="menu menu-box-right menu-box-detached rounded-m" data-menu-width="260" data-menu-load="assets/menu-main.html" data-menu-active="nav-welcome" data-menu-effect="menu-over">
-      </div>
+
+
+
+
+  <div class="footer" data-menu-load="assets/menu-footer.html"></div>
+</div>
+
+  <div id="menu-share" class="menu menu-box-bottom menu-box-detached rounded-m" data-menu-load="assets/menu-share.html" data-menu-height="420" data-menu-effect="menu-over">
+  </div>
+  <div id="menu-highlights" class="menu menu-box-bottom menu-box-detached rounded-m" data-menu-load="assets/menu-colors.html" data-menu-height="510" data-menu-effect="menu-over">
+  </div>
+  <div id="menu-main" class="menu menu-box-right menu-box-detached rounded-m" data-menu-width="260" data-menu-load="assets/menu-main.html" data-menu-active="nav-welcome" data-menu-effect="menu-over">
+  </div>
+
+
+  <div id="menu-install-pwa-android" class="menu menu-box-bottom menu-box-detached rounded-l" data-menu-height="350" data-menu-effect="menu-parallax">
+  <div class="boxed-text-l mt-4">
+  <img class="rounded-l mb-3" src="assets/app/icons/icon-128x128.png" alt="img" width="90">
+  <h4 class="mt-3">Azures on your Home Screen</h4>
+  <p>
+  Install Azures on your home screen, and access it just like a regular app. It really is that simple!
+  </p>
+  <a href="#" class="pwa-install btn btn-s rounded-s shadow-l text-uppercase font-900 bg-highlight mb-2">Add to Home Screen</a><br>
+  <a href="#" class="pwa-dismiss close-menu color-gray2-light text-uppercase font-900 opacity-60 font-10">Maybe later</a>
+  <div class="clear"></div>
+  </div>
+  </div>
+
+  <div id="menu-install-pwa-ios" class="menu menu-box-bottom menu-box-detached rounded-l" data-menu-height="320" data-menu-effect="menu-parallax">
+  <div class="boxed-text-xl mt-4">
+  <img class="rounded-l mb-3" src="assets/app/icons/icon-128x128.png" alt="img" width="90">
+  <h4 class="mt-3">Azures on your Home Screen</h4>
+  <p class="mb-0 pb-3">
+  Install Azures on your home screen, and access it just like a regular app. Open your Safari menu and tap "Add to Home Screen".
+  </p>
+  <div class="clear"></div>
+  <a href="#" class="pwa-dismiss close-menu color-highlight font-800 opacity-80 text-center text-uppercase">Maybe later</a><br>
+  <i class="fa-ios-arrow fa fa-caret-down font-40"></i>
+  </div>
+</div>
+
