--- a/src/app/acceuil/acceuil.component.html
+++ b/src/app/acceuil/acceuil.component.html
@@ -7,15 +7,15 @@
   <a href="#" data-menu="menu-highlights" class="header-icon header-icon-3"><i class="fas fa-brush"></i></a>
   </div>
   <div id="footer-bar" class="footer-bar-5">
-    <a href="/blog"><i data-feather="book" data-feather-line="1" data-feather-size="21" data-feather-color="red2-dark" data-feather-bg="red2-fade-light"></i><span>Blog</span></a>
+    <a href="#0"><i data-feather="book" data-feather-line="1" data-feather-size="21" data-feather-color="red2-dark" data-feather-bg="red2-fade-light"></i><span>Blog</span></a>
     <a href="/telechargement"><i data-feather="download" data-feather-line="1" data-feather-size="21" data-feather-color="green1-dark" data-feather-bg="green1-fade-light"></i><span>Telechargement</span></a>
     <a href="/" class="active-nav"><i data-feather="home" data-feather-line="1" data-feather-size="21" data-feather-color="blue2-dark" data-feather-bg="blue2-fade-light"></i><span>Accueil</span></a>
-    <a href="formation"><i data-feather="youtube" data-feather-line="1" data-feather-size="21" data-feather-color="brown1-dark" data-feather-bg="brown1-fade-light"></i><span>Formation</span></a>
+    <a href="#0"><i data-feather="youtube" data-feather-line="1" data-feather-size="21" data-feather-color="brown1-dark" data-feather-bg="brown1-fade-light"></i><span>Formation</span></a>
     <a href="/parametre"><i data-feather="settings" data-feather-line="1" data-feather-size="21" data-feather-color="gray2-dark" data-feather-bg="gray2-fade-light"></i><span>Paramètre</span></a>
     </div>
   <div class="page-content">
   <div class="page-title page-title-large">
-  <h2 data-username="Bienvene" class="greeting-text"></h2>
+  <h2 data-username="Bienvenue" class="greeting-text"></h2>
   <a href="#" data-menu="menu-main" class="bg-fade-gray1-dark shadow-xl preload-img" data-src="assets/images/avatars/5s.png"></a>
   </div>
   <div class="card header-card shape-rounded" data-card-height="210">
@@ -151,29 +151,8 @@
   </div>
 
 
-  <div id="menu-install-pwa-android" class="menu menu-box-bottom menu-box-detached rounded-l" data-menu-height="350" data-menu-effect="menu-parallax">
-  <div class="boxed-text-l mt-4">
-  <img class="rounded-l mb-3" src="assets/app/icons/icon-128x128.png" alt="img" width="90">
-  <h4 class="mt-3">Azures on your Home Screen</h4>
-  <p>
-  Install Azures on your home screen, and access it just like a regular app. It really is that simple!
-  </p>
-  <a href="#" class="pwa-install btn btn-s rounded-s shadow-l text-uppercase font-900 bg-highlight mb-2">Add to Home Screen</a><br>
-  <a href="#" class="pwa-dismiss close-menu color-gray2-light text-uppercase font-900 opacity-60 font-10">Maybe later</a>
-  <div class="clear"></div>
-  </div>
-  </div>
+ 
 
-  <div id="menu-install-pwa-ios" class="menu menu-box-bottom menu-box-detached rounded-l" data-menu-height="320" data-menu-effect="menu-parallax">
-  <div class="boxed-text-xl mt-4">
-  <img class="rounded-l mb-3" src="assets/app/icons/icon-128x128.png" alt="img" width="90">
-  <h4 class="mt-3">Azures on your Home Screen</h4>
-  <p class="mb-0 pb-3">
-  Install Azures on your home screen, and access it just like a regular app. Open your Safari menu and tap "Add to Home Screen".
-  </p>
-  <div class="clear"></div>
-  <a href="#" class="pwa-dismiss close-menu color-highlight font-800 opacity-80 text-center text-uppercase">Maybe later</a><br>
-  <i class="fa-ios-arrow fa fa-caret-down font-40"></i>
-  </div>
-</div>
+
+
 
