--- a/src/app/client/accueil/accueil.component.html
+++ b/src/app/client/accueil/accueil.component.html
@@ -7,11 +7,11 @@
   <a href="#" data-menu="menu-highlights" class="header-icon header-icon-3"><i class="fas fa-brush"></i></a>
   </div>
   <div id="footer-bar" class="footer-bar-5">
-    <a href="#0"><i data-feather="book" data-feather-line="1" data-feather-size="21" data-feather-color="red2-dark" data-feather-bg="red2-fade-light"></i><span>Blog</span></a>
+    <a href="a-propos"><i data-feather="phone" data-feather-line="1" data-feather-size="21" data-feather-color="red2-dark" data-feather-bg="red2-fade-light"></i><span>Contact</span></a>
     <a href="/telechargement"><i data-feather="download" data-feather-line="1" data-feather-size="21" data-feather-color="green1-dark" data-feather-bg="green1-fade-light"></i><span>Telechargement</span></a>
-    <a href="/" class="active-nav"><i data-feather="home" data-feather-line="1" data-feather-size="21" data-feather-color="blue2-dark" data-feather-bg="blue2-fade-light"></i><span>Accueil</span></a>
-    <a href="/signin"><i data-feather="youtube" data-feather-line="1" data-feather-size="21" data-feather-color="brown1-dark" data-feather-bg="brown1-fade-light"></i><span>Formation</span></a>
-    <a href="/parametre"><i data-feather="settings" data-feather-line="1" data-feather-size="21" data-feather-color="gray2-dark" data-feather-bg="gray2-fade-light"></i><span>Paramètre</span></a>
+    <a href="/" ><i data-feather="home" data-feather-line="1" data-feather-size="21" data-feather-color="blue2-dark" data-feather-bg="blue2-fade-light"></i><span>Accueil</span></a>
+    <a href="/formation"><i data-feather="youtube" data-feather-line="1" data-feather-size="21" data-feather-color="brown1-dark" data-feather-bg="brown1-fade-light"></i><span>Formation</span></a>
+    <a href="/parametre" class="active-nav"><i data-feather="settings" data-feather-line="1" data-feather-size="21" data-feather-color="gray2-dark" data-feather-bg="gray2-fade-light"></i><span>Paramètre</span></a>
     </div>
   <div class="page-content">
   <div class="page-title page-title-large">
@@ -39,7 +39,7 @@
   <div class="card-bottom">
   <h1 class="font-24 font-700">Formation video</h1>
   <p class="boxed-text-xl">
-    Apprener a maitriser les logiciels que vous telechargé.
+  Apprener a maitriser les logiciels que vous telechargé.
   </p>
   </div>
   <div class="card-overlay bg-gradient-fade"></div>
@@ -59,10 +59,10 @@
   <div class="content mt-0">
   <div class="row">
     <div class="col-6">
-      <a href="#" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Telechargerment</a>
+      <a href="/telechargement" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Telechargerment</a>
       </div>
       <div class="col-6">
-      <a href="#" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Formation Video</a>
+      <a href="/formation" class="btn btn-full btn-m rounded-s text-uppercase font-900 shadow-xl bg-highlight">Formation Video</a>
       </div>
       <p><br></p>
       <div class="col-6">
