--- a/src/app/client/contact/contact.component.html
+++ b/src/app/client/contact/contact.component.html
@@ -17,45 +17,59 @@
 <h2><a href="#" data-back-button><i class="fa fa-arrow-left"></i></a>Paramètre</h2>
 <a href="#" data-menu="menu-main" class="bg-fade-gray1-dark shadow-xl preload-img" data-src="assets/images/avatars/5s.png"></a>
 </div>
-<div class="card header-card shape-rounded" data-card-height="210">
-<div class="card-overlay bg-highlight opacity-95"></div>
-<div class="card-overlay dark-mode-tint"></div>
-<div class="card-bg bg-20"></div>
-</div>
-<div class="card card-style">
-<div class="content mt-0 mb-2">
-  <div class="list-group list-custom-large mb-4">
-    <a href="#" data-toggle-theme class="show-on-theme-light">
-      <i class="fa font-14 fa-moon bg-brown1-dark rounded-sm"></i>
-      <span>Theme Sombre</span>
-      <strong>Le theme sombre est disponible</strong>
-      <i class="fa fa-angle-right mr-2"></i>
-      </a>
-      <a href="#" data-toggle-theme class="show-on-theme-dark">
-      <i class="fa font-14 fa-lightbulb bg-yellow1-dark rounded-sm"></i>
-      <span>Theme Clair </span>
-      <strong>Le theme Clair est disponible</strong>
-      <i class="fa fa-angle-right mr-2"></i>
-      </a>
-      <a href="#" data-menu="menu-highlights">
-      <i class="fa font-14 fa-brush bg-highlight color-white rounded-sm"></i>
-      <span>Couleur du site</span>
-      <strong>des tonnes de couleurs pour personnaliser le site</strong>
-      <i class="fa fa-angle-right mr-2"></i>
-      </a>
-      <a href="#" data-menu="menu-share">
-      <i class="fa font-14 fa-share-alt bg-red2-dark rounded-sm"></i>
-      <span>Partagé AMS</span>
-      <strong>Clic just et nous faisons le reste</strong>
-      <i class="fa fa-angle-right mr-2"></i>
-      </a>
+<div class="card header-card shape-rounded" data-card-height="150">
+  <div class="card-overlay bg-highlight opacity-95"></div>
+  <div class="card-overlay dark-mode-tint"></div>
+  <div class="card-bg bg-20"></div>
+  </div>
+  <div class="card card-style">
+  <div class="responsive-iframe">
+  <iframe src='https://maps.google.com/?ie=UTF8&amp;ll=47.595131,-122.330414&amp;spn=0.006186,0.016512&amp;t=h&amp;z=17&amp;output=embed' frameborder='0' allowfullscreen></iframe>
+  </div>
+  </div>
 
-
-    </div>
-
-
-</div>
-</div>
+  <div class="card card-style">
+  <div class="content mb-0">
+  <h3 class="font-700">Postal Information</h3>
+  <p class="pb-0 mb-0">PO Box 22161 Street Collins East</p>
+  <p class="pb-0 mb-0">PO Box 16122 Collins Street West</p>
+  <p class="pb-0">Victoria 8007 Australia</p>
+  <div class="divider"></div>
+  <h3 class="font-700">Envato Headquarters</h3>
+  <p class="pb-0 mb-0">121 King Street, Melbourne</p>
+  <p class="pb-0 mb-0">PO Box 16122 Collins Street West</p>
+  <p class="pb-0">Victoria 3000 Australia</p>
+  <div class="list-group list-custom-small">
+  <a href="tel:+1 234 567 890">
+  <i class="fa font-14 fa-phone color-phone"></i>
+  <span>+1 234 567 8900</span>
+  <span class="badge bg-highlight color-white">TAO TO CALL</span>
+  <i class="fa fa-angle-right"></i>
+  </a>
+  <a href="mailto:mail@domain.com">
+  <i class="fa font-14 fa-envelope color-mail"></i>
+  <span>mail@domain.com</span>
+  <span class="badge bg-highlight color-white">TAO TO MAIL</span>
+  <i class="fa fa-angle-right"></i>
+  </a>
+  <a href="https://www.facebook.com/enabled.labs/">
+  <i class="fab font-14 fa-facebook color-facebook"></i>
+  <span>enabled.labs</span>
+  <i class="fa fa-link"></i>
+  </a>
+  <a href="https://twitter.com/iEnabled">
+  <i class="fab font-14 fa-twitter-square color-twitter"></i>
+  <span>@iEnabled</span>
+  <i class="fa fa-link"></i>
+  </a>
+  <a href="#" class="border-0">
+  <i class="fab font-14 fa-linkedin color-linkedin"></i>
+  <span>@Enabled</span>
+  <i class="fa fa-link"></i>
+  </a>
+  </div>
+  </div>
+  </div>
 
 
 <div class="footer" data-menu-load="assets/menu-footer.html"></div>
@@ -67,7 +81,3 @@
 </div>
 <div id="menu-main" class="menu menu-box-right menu-box-detached rounded-m" data-menu-width="260" data-menu-load="assets/menu-main.html" data-menu-active="nav-settings" data-menu-effect="menu-over">
 </div>
-
-
-
-
