--- a/src/app/client/contact/contact.component.html
+++ b/src/app/client/contact/contact.component.html
@@ -6,11 +6,11 @@
   <a href="#" data-menu="menu-highlights" class="header-icon header-icon-3"><i class="fas fa-brush"></i></a>
   </div>
   <div id="footer-bar" class="footer-bar-5">
-    <a href="a-propos"><i data-feather="phone" data-feather-line="1" data-feather-size="21" data-feather-color="red2-dark" data-feather-bg="red2-fade-light"></i><span>Contact</span></a>
+    <a href="a-propos" class="active-nav"><i data-feather="phone" data-feather-line="1" data-feather-size="21" data-feather-color="red2-dark" data-feather-bg="red2-fade-light"></i><span>Contact</span></a>
     <a href="/telechargement"><i data-feather="download" data-feather-line="1" data-feather-size="21" data-feather-color="green1-dark" data-feather-bg="green1-fade-light"></i><span>Telechargement</span></a>
     <a href="/" ><i data-feather="home" data-feather-line="1" data-feather-size="21" data-feather-color="blue2-dark" data-feather-bg="blue2-fade-light"></i><span>Accueil</span></a>
     <a href="/formation"><i data-feather="youtube" data-feather-line="1" data-feather-size="21" data-feather-color="brown1-dark" data-feather-bg="brown1-fade-light"></i><span>Formation</span></a>
-    <a href="/parametre" class="active-nav"><i data-feather="settings" data-feather-line="1" data-feather-size="21" data-feather-color="gray2-dark" data-feather-bg="gray2-fade-light"></i><span>Paramètre</span></a>
+    <a href="/parametre" ><i data-feather="settings" data-feather-line="1" data-feather-size="21" data-feather-color="gray2-dark" data-feather-bg="gray2-fade-light"></i><span>Paramètre</span></a>
     </div>
 <div class="page-content">
 <div class="page-title page-title-small">
@@ -30,41 +30,35 @@
 
   <div class="card card-style">
   <div class="content mb-0">
-  <h3 class="font-700">Postal Information</h3>
-  <p class="pb-0 mb-0">PO Box 22161 Street Collins East</p>
-  <p class="pb-0 mb-0">PO Box 16122 Collins Street West</p>
-  <p class="pb-0">Victoria 8007 Australia</p>
-  <div class="divider"></div>
-  <h3 class="font-700">Envato Headquarters</h3>
-  <p class="pb-0 mb-0">121 King Street, Melbourne</p>
-  <p class="pb-0 mb-0">PO Box 16122 Collins Street West</p>
-  <p class="pb-0">Victoria 3000 Australia</p>
+  <h3 class="font-700">Localisation de AMS</h3>
+  <p class="pb-0 mb-0">Abidjan, Yopougon</p>
+
   <div class="list-group list-custom-small">
-  <a href="tel:+1 234 567 890">
+  <a href="tel:+225 57961200">
   <i class="fa font-14 fa-phone color-phone"></i>
-  <span>+1 234 567 8900</span>
-  <span class="badge bg-highlight color-white">TAO TO CALL</span>
+  <span>+225 57961200</span>
+  <span class="badge bg-highlight color-white">Appeler nous</span>
   <i class="fa fa-angle-right"></i>
   </a>
-  <a href="mailto:mail@domain.com">
+  <a href="assohoustephane@gmail.com">
   <i class="fa font-14 fa-envelope color-mail"></i>
-  <span>mail@domain.com</span>
-  <span class="badge bg-highlight color-white">TAO TO MAIL</span>
+  <span>assohoustephane@gmail.com</span>
+  <span class="badge bg-highlight color-white">email</span>
   <i class="fa fa-angle-right"></i>
   </a>
   <a href="https://www.facebook.com/enabled.labs/">
   <i class="fab font-14 fa-facebook color-facebook"></i>
-  <span>enabled.labs</span>
+  <span>AMS</span>
   <i class="fa fa-link"></i>
   </a>
   <a href="https://twitter.com/iEnabled">
   <i class="fab font-14 fa-twitter-square color-twitter"></i>
-  <span>@iEnabled</span>
+  <span>AMS</span>
   <i class="fa fa-link"></i>
   </a>
   <a href="#" class="border-0">
   <i class="fab font-14 fa-linkedin color-linkedin"></i>
-  <span>@Enabled</span>
+  <span>AMS</span>
   <i class="fa fa-link"></i>
   </a>
   </div>
