--- a/src/app/client/telechargement/telechargement.component.html
+++ b/src/app/client/telechargement/telechargement.component.html
@@ -25,52 +25,34 @@
 <div class="content">
   <div class="search-box bg-theme rounded-m shadow-xl bottom-0">
   <i class="fa fa-search"></i>
-  <input type="text" class="border-0" placeholder="What are you looking for? (try all) " data-search>
+  <input type="text" class="border-0" placeholder="Rechercher les logiciels dont vous avez besoins " data-search>
   </div>
   <div class="search-results disabled-search-list card card-style mx-0 mt-3 px-2">
   <div class="list-group list-custom-large">
-  <a href="#" data-filter-item data-filter-name="all demo smartphone apple iphone">
-  <i class="fab fa-apple color-gray2-dark"></i>
-  <span>Apple</span>
-  <strong>Works on iOS 10 and Higher</strong>
-  <i class="fa fa-angle-right mr-2"></i>
-  </a>
-  <a href="#" data-filter-item data-filter-name="all demo smartphone apple iphone">
-  <i class="fab fa-android color-green1-dark"></i>
-  <span>Android</span>
-  <strong>Works on Android 5.1.1 and Higher</strong>
-  <i class="fa fa-angle-right mr-2"></i>
-  </a>
-  <a href="#" data-filter-item data-filter-name="all demo code css3 css">
-  <i class="fab fa-css3 color-blue2-dark font-17"></i>
-  <span>CSS3 </span>
-  <strong>Beautiful Design. Simple Code.</strong>
-  <i class="fa fa-angle-right mr-2"></i>
-  </a>
-  <a href="#" data-filter-item data-filter-name="all demo code html5 html">
-  <i class="fab fa-html5 color-orange-dark"></i>
-  <span>HTML5 </span>
-  <strong>Powerful and Universally Compatible</strong>
-  <i class="fa fa-angle-right mr-2"></i>
-  </a>
-  <a href="#" data-filter-item data-filter-name="all demo support help">
-  <i class="fa fa-life-ring color-red2-dark font-17"></i>
-  <span>Support </span>
-  <strong>Elite Quality, 24/7 Support for Buyers</strong>
-  <i class="fa fa-angle-right mr-2"></i>
-  </a>
-  <a href="#" data-filter-item data-filter-name="all demo code js jquery java javascript">
-  <i class="fab fa-js color-yellow2-dark font-17"></i>
-  <span>JavaScript </span>
-  <strong>Clean Code, Easy to Use and Modify</strong>
-  <i class="fa fa-angle-right mr-2"></i>
-  </a>
-  <a href="#" data-filter-item data-filter-name="all demo support elite help documentation">
+  <a href="/telechargement/sage-comptabilite" data-filter-item data-filter-name="sage comptabilite">
   <i class="fa fa-file color-gray2-dark font-17"></i>
-  <span>Documentation </span>
-  <strong>Every Feature and Aspect Covered.</strong>
+  <span>Sage Comptabilite</span>
+  <strong>Logiciel</strong>
   <i class="fa fa-angle-right mr-2"></i>
   </a>
+  <a href="/telechargement/sage-gestion-commerciale" data-filter-item data-filter-name="sage gestion commerciale">
+    <i class="fa fa-file color-gray2-dark font-17"></i>
+    <span>Sage Gestion Commerciale</span>
+    <strong>Logiciel</strong>
+    <i class="fa fa-angle-right mr-2"></i>
+    </a>
+    <a href="#" data-filter-item data-filter-name="sage immobilisation">
+      <i class="fa fa-file color-gray2-dark font-17"></i>
+      <span>Sage Immobilsation</span>
+      <strong>Logiciel</strong>
+      <i class="fa fa-angle-right mr-2"></i>
+      </a>
+      <a href="/telechargement/sage-paie" data-filter-item data-filter-name="sage paie">
+        <i class="fa fa-file color-gray2-dark font-17"></i>
+        <span>Sage Paie</span>
+        <strong>Logiciel</strong>
+        <i class="fa fa-angle-right mr-2"></i>
+        </a>
   </div>
   </div>
   </div>
@@ -88,7 +70,7 @@
       <div class="card card-style">
       <img src="assets/images/L_SAGE_Bright_Green3.png" class="img-fluid">
       <div class="content pb-0">
-      <p><a href="#" class="btn btn-3d btn-m btn-full mb-3 rounded-xl text-uppercase font-900 shadow-s border-blue2-dark  bg-blue2-light">Voir</a></p>
+      <p><a href="/telechargement/sage-gestion-commerciale" class="btn btn-3d btn-m btn-full mb-3 rounded-xl text-uppercase font-900 shadow-s border-blue2-dark  bg-blue2-light">Voir</a></p>
       </div>
       </div>
       </div>
@@ -99,7 +81,7 @@
       <div class="card card-style">
       <img src="assets/images/paie.png" class="img-fluid">
       <div class="content pb-0">
-      <p><a href="#" class="btn btn-3d btn-m btn-full mb-3 rounded-xl text-uppercase font-900 shadow-s border-blue2-dark  bg-blue2-light">Voir</a></p>
+      <p><a href="/telechargement/sage-paie" class="btn btn-3d btn-m btn-full mb-3 rounded-xl text-uppercase font-900 shadow-s border-blue2-dark  bg-blue2-light">Voir</a></p>
       </div>
       </div>
       </div>
