mise a jour des lien

--- a/src/app/client/telechargement/sage-comptabilite/sage-comptabilite.component.html
+++ b/src/app/client/telechargement/sage-comptabilite/sage-comptabilite.component.html
@@ -62,7 +62,7 @@
   </div>
   </div>
 
-  <a href="#" class="btn btn-full bg-green1-dark btn-l rounded-sm text-uppercase font-800"><i class="fa fa-download pr-3"></i>Telecharger maintenant</a>
+  <a href="https://proud-morning-a1e4.rodrigueassohou.workers.dev/Logiciels/Sage%2520100%2520Comptabilite%2520i7%2520v8.50.zip?rootId=0ABWapVYci3JeUk9PVA" class="btn btn-full bg-green1-dark btn-l rounded-sm text-uppercase font-800"><i class="fa fa-download pr-3"></i>Telecharger maintenant</a>
   </div>
   </div>
   <div class="card card-style">
